--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,9 @@
 // Plagins
 @import "normalize-scss/sass/normalize/import-now";
+@import "primeicons/primeicons.css";
 
 // Abstracts
-@import 'abstracts/variables';
+@import "abstracts/variables";
+
+// Base
+@import "base/generic";
