Реализованы комопненты cardComponent и CardsGroupComponent для вывода постов на страницу

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,9 +1,14 @@
 // Colors
 $white: #ffffff;
 $catskill-white: #ecf1f7;
+$dodger-blue: #3b82f6;
+$gray-chateau: #a8aeb0;
 
 $html-background: $catskill-white;
 $header-background: $catskill-white;
+
+$card-title: $dodger-blue;
+$card-body: $gray-chateau;
 
 // Breakpoints
 $screen-tablet: '(min-width: 768px)';
